<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.metaxiii.fr</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>java-tutorials</name>

    <modules>
        <module>Intro to Jackson ObjectMapper</module>
        <module>spring-boot-start</module>
        <module>Serialize and deserialize enums with jackson</module>
        <module>report</module>
        <module>jackson-json-view</module>
        <module>error-handling-for-rest-with-spring</module>
        <module>jackson-date</module>
        <module>springwebclient-vs-resttemplate</module>
        <module>jackson-annotations</module>
        <module>spring security integration test</module>
        <module>entity-dto-conversion-rest-api</module>
        <module>actuator</module>
        <module>powerful_comparison_with_lambdas</module>
        <module>partition list in java</module>
        <module>CompletableFuture</module>
        <module>guava cache</module>
        <module>guava - Join and split</module>
        <module>guava write and read from file</module>
        <module>guava list</module>
        <module>Guava - Sets</module>
        <module>Guava - Maps</module>
        <module>Guava CharMatcher</module>
        <module>Get a Random Element From a Set in Java</module>
        <module>Get the Indexes of Regex Pattern Matches in Java</module>
        <module>Extract Text Between Square Brackets</module>
        <module>spring-data-get-last-record</module>
        <module>mask-email-adress-phone</module>
        <module>count-number-unique</module>
        <module>intro-jfreechart</module>
        <module>initial-name</module>
        <module>statements_before_super</module>
        <module>open-html</module>
        <module>string-to-offsetdatetime</module>
        <module>implement-builder-pattern</module>
        <module>string-cast-vs-valueof</module>
        <module>gzip-compress-create-byte-array</module>
        <module>simple-mail</module>
        <module>remove-bracket-characters</module>
        <module>convert-org-w3c-dom-document-string</module>
        <module>convert-int-unsigned-byte</module>
        <module>mode-integer-array</module>
        <module>string-delete-digits</module>
        <module>arraylist-no-duplicates</module>
        <module>mapstruct-lombok</module>
        <module>passing-method-parameter</module>
        <module>avoid-no-multipart-boundary-was-found</module>
        <module>hibernate-reactive</module>
        <module>string-insert-emoji</module>
        <module>gson-convert-jsonarray-hashmap</module>
        <module>test-whether-file-image</module>
        <module>month-number-name-convert</module>
        <module>draw-random-hexadecimal-number</module>
        <module>sort-string-array-length-comparator</module>
        <module>string-etract-after-last-occurence-match</module>
        <module>lombok-extensionmethod</module>
        <module>sort-map-value-list-streams</module>
        <module>arraylist-include-string-arrays</module>
        <module>convert-joda-time-datetime-sql-timestamp</module>
        <module>array-custom-tostring</module>
        <module>FloatvsDouble</module>
        <module>null-array-empty-list-convert</module>
        <module>camel-snake-case-conversion</module>
        <module>jpa-query-localdatetime-with-localdate</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <sonar.organization>metaxiii</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.exclusions>**/model/*.java,
            **/configuration/*.java,
            **/config/*.java,
            **/entity/*.java,
            **/enums/*.java,
            **/dto/*.java,
            **/exceptions/*.java
        </sonar.exclusions>
        <sonar.coverage.exclusions>${sonar.exclusions}</sonar.coverage.exclusions>
        <sonar.cpd.exclusions>${sonar.exclusions}</sonar.cpd.exclusions>
        <!--suppress
        UnresolvedMavenProperty -->
        <sonar.coverage.jacoco.xmlReportPaths>
            ${maven.multiModuleProjectDirectory}/report/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <junit-jupiter.version>6.1.0</junit-jupiter.version>
        <spotless-maven-plugin.version>1.35.0</spotless-maven-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.5.5</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${java.version}</release>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>5.6.0.6792</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>${spotless-maven-plugin.version}</version>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>